<resources>
    <string name="app_name">Teleappsistencia</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="bearer" translatable="false">Bearer </string>
    <string name="menu_usuarios" translatable="false">Usuarios</string>
    <string name="menu_persona" translatable="false">Persona</string>
    <string name="menu_direccion" translatable="false">Dirección</string>
    <string name="menu_grupos" translatable="false">Grupos</string>
    <string name="menu_dispositivos_auxiliares_terminal" translatable="false">Dispositivos auxiliares en terminal</string>
    <string name="menu_tipo_vivienda" translatable="false">Tipo de vivienda</string>
    <string name="menu_tipo_situacion" translatable="false">Tipo de situación</string>
    <string name="menu_historico_tipo_situacion" translatable="false">Histórico tipo de situación</string>
    <string name="menu_alarmas">Alarmas</string>
    <string name="menu_tipo_alarma" translatable="false">Tipo Alarma</string>
    <string name="menu_clasificacion_alarma" translatable="false">Clasificación Alarma</string>
    <string name="menu_alarma">Alarma</string>
    <string name="menu_usuarios_servicio">Usuarios del Servicio</string>
    <string name="menu_usuarios_sistema">Usuarios del Sistema</string>
    <string name="menu_centro_sanitario_en_alarma" translatable="false">Centro Sanitario en Alarma</string>
    <string name="menu_recursos_comunitarios_en_alarma" translatable="false">Recursos Comunitarios en Alarma</string>
    <string name="menu_persona_de_contacto_en_alarma" translatable="false">Persona de contacto en Alarma</string>
    <string name="insertar" translatable="false">Insertar</string>
    <string name="listar" translatable="false">Listar</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="apellidos">Apellidos</string>
    <string name="email" translatable="false">Email</string>
    <string name="sexo">Sexo</string>
    <string name="sexo_masculino">Hombre</string>
    <string name="sexo_femenimo">Mujer</string>
    <string name="id_direccion" translatable="false">ID de la dirección</string>
    <string name="id_historicoTipoSituacion" translatable="false">ID del histórico tipo de situación</string>
    <string name="id_tipoSituacion" translatable="false">ID del tipo de situación</string>
    <string name="id_dispositivoAuxiliar" translatable="false">ID del dispositivo auxiliar en terminal</string>
    <string name="id_tipoAlarma" translatable="false">ID del tipo de alarma</string>
    <string name="numeroTerminal" translatable="false">Número del terminal</string>
    <string name="grupo">Grupo</string>
    <string name="textview_nombre_usuario_obligatorio">El nombre de usuario es obligatorio.</string>
    <string name="textview_password_obligatoria">La contraseña es obligatoria.</string>
    <string name="textview_nombre_obligatorio">El nombre es obligatorio</string>
    <string name="textview_apellidos_obligatorios">Los apellidos son obligatorios</string>
    <string name="textview_email_obligatorio">El email es obligatorio</string>
    <string name="textview_fecha_obligatoria">La fecha es obligatoria</string>
    <string name="textview_localidad_obligatoria">La localidad es obligatoria</string>
    <string name="textview_provincia_obligatoria">La provincia es obligatoria</string>
    <string name="textview_direccion_obligatoria">La dirección es obligatoria</string>
    <string name="textview_codigoPostal_obligatoria">El código postal es obligatorio</string>
    <string name="textview_dni_obligatorio">El DNI es obligatorio</string>
    <string name="textview_dni_no_valido">El DNI no es válido</string>
    <string name="textview_fechaNacimiento_obligatorio">La fecha de nacimiento es obligatoria</string>
    <string name="textview_telefonoFijo_obligatorio">El teléfono fijo es obligatorio</string>
    <string name="textview_telefonoFijo_error_longitud" translatable="false">El teléfono fijo debe tener 9 dígitos</string>
    <string name="textview_telefonoFijo_error_caracter" translatable="false">El teléfono fijo solo puede tener dígitos</string>
    <string name="textview_telefonoMovil_obligatorio" translatable="false">El teléfono móvil es obligatorio</string>
    <string name="textview_telefonoMovil_error_longitud" translatable="false">El teléfono móvil debe tener 9 dígitos</string>
    <string name="textview_telefonoMovil_error_caracter" translatable="false">El teléfono móvil solo puede tener dígitos</string>
    <string name="textview_longitud_minima_nombre_usuario" translatable="false">El nombre de usuario debe tener al menos 4 caracteres.</string>
    <string name="titulo_listar_tipoVivienda" translatable="false">Tipos de vivienda</string>
    <string name="titulo_listar_tipoSituacion" translatable="false">Tipos de Situaciones</string>
    <string name="titulo_listar_usuario" translatable="false">Usuarios del sistema</string>
    <string name="titulo_listar_persona" translatable="false">Personas</string>
    <string name="titulo_listar_historicoTipoSituacion" translatable="false">Histórico tipos de situaciones</string>
    <string name="titulo_listar_grupo" translatable="false">Grupos en el sistema</string>
    <string name="titulo_listar_dispositivoAux" translatable="false">Dispositivos auxiliares en terminal</string>
    <string name="titulo_listar_direccion" translatable="false">Direcciones</string>
    <string name="titulo_insertar_tipoVivienda" translatable="false">Crear nuevo tipo de vivienda</string>
    <string name="titulo_modificar_tipoVivienda" translatable="false">Modificar datos tipo vivienda</string>
    <string name="titulo_insertar_tipoSituacion" translatable="false">Crear nuevo tipo de situación</string>
    <string name="titulo_modificar_tipoSituacion" translatable="false">Modificar datos tipo situacion</string>
    <string name="titulo_insertar_usuarios" translatable="false">Crear nuevo usuario</string>
    <string name="titulo_modificar_usuarios" translatable="false">Modificar datos usuario</string>
    <string name="grupos_usuarios" translatable="false">Grupos</string>
    <string name="titulo_insertar_personas" translatable="false">Crear nueva persona</string>
    <string name="dni_persona" translatable="false">DNI</string>
    <string name="fechaNacimiento_persona" translatable="false">Fecha de nacimiento</string>
    <string name="telefonoFijo_persona" translatable="false">Teléfono fijo</string>
    <string name="telefonoMovil_persona" translatable="false">Teléfono móvil</string>
    <string name="titulo_modificar_personas" translatable="false">Modificar datos persona</string>
    <string name="fecha_historicoTipoSituacion" translatable="false">Fecha</string>
    <string name="titulo_insertar_historicoTipoSituacion" translatable="false">Crear nuevo histórico tipo de situación</string>
    <string name="titulo_modificar_historicoTipoSituacion" translatable="false">Modificar datos histórica tipo de situación</string>
    <string name="terminal_historicoTipoSituacion" translatable="false">Terminal</string>
    <string name="tipoSituacion_historicoTipoSituacion" translatable="false">Terminal</string>
    <string name="titulo_insertar_grupo" translatable="false">Crear nuevo grupo</string>
    <string name="titulo_modificar_grupo" translatable="false">Modificar datos grupo</string>
    <string name="titulo_insertar_dispositivosAux" translatable="false">Crear nuevo dispositivo auxiliar en terminal</string>
    <string name="titulo_modificar_dispositivosAux" translatable="false">Modificar datos dispositivos auxiliares en terminal</string>
    <string name="titulo_insertar_direccion" translatable="false">Crear nueva dirección</string>
    <string name="localidad_direccion" translatable="false">Localidad</string>
    <string name="provincia_direccion" translatable="false">Provincia</string>
    <string name="direccion_direccion" translatable="false">Dirección</string>
    <string name="codigoPostal_direccion" translatable="false">Código postal</string>
    <string name="titulo_modificar_direccion" translatable="false">Modificar datos dirección</string>
    <string name="textview_iniciar_sesion" translatable="false">Iniciar sesión</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="login_nombre" translatable="false">Aarón Martín Jiménez</string>
    <string name="login_correo" translatable="false">martinjimenezaaron@gmail.com</string>
    <string name="menu_tipoCentroSanitario" translatable="false">Tipo_Centro_Sanitario</string>
    <string name="menu_tipoModalidadPaciente" translatable="false">Tipo_Modalidad_Paciente</string>
    <string name="menu_centroSanitario" translatable="false">Centro_Sanitario</string>
    <string name="menu_tipoRecursoComunitario" translatable="false">Tipo_Recurso_Comunitario</string>
    <string name="menu_recursoComunitario" translatable="false">Recurso_Comunitario</string>
    <string name="menu_insertar" translatable="false">Insertar</string>
    <string name="menu_modificar" translatable="false">Modificar</string>
    <string name="menu_listar" translatable="false">Listar</string>
    <string name="titulo_crearNuevoTipoCentroSanitario" translatable="false">Crear nuevo tipo centro sanitario</string>
    <string name="titulo_crearNuevoTipoModalidadPaciente" translatable="false">Crear nuevo tipo modalidad paciente</string>
    <string name="guardar" translatable="false">Guardar</string>
    <string name="volver" translatable="false">Volver</string>
    <string name="btn_volver" translatable="false">VOLVER</string>
    <string name="btn_guardar" translatable="false">GUARDAR</string>
    <string name="niveles" translatable="false">niveles</string>
    <string name="nivel_sp_1" translatable="false">nivel 1</string>
    <string name="nivel_sp_2" translatable="false">nivel 2</string>
    <string name="nivel_sp_3" translatable="false">nivel 3</string>
    <string name="motivo_dp" translatable="false">  Motivo:</string>
    <string name="informe" translatable="false">Informe</string>
    <string name="terminal_dp" translatable="false">Terminal:</string>
    <string name="paciente_dp" translatable="false">Paciente:</string>
    <string name="telefono_dp" translatable="false">Teléfono:</string>
    <string name="id_alarma_dp" translatable="false">ID Alarma:</string>
    <string name="tipo_dp" translatable="false">Tipo:</string>
    <string name="clasificacion_dp" translatable="false">Clasificación:</string>
    <string name="contactos_dp" translatable="false">Contactos:</string>
    <string name="gestionar" translatable="false">Gestionar</string>
    <string name="caracterInvisible" translatable="false">‎ </string>
    <string name="datos_sanitarios" translatable="false">Datos Sanitarios</string>
    <string name="nuss" translatable="false">NUSS</string>
    <string name="tiempo" translatable="false">Tiempo</string>
    <string name="vivienda" translatable="false">Vivienda</string>
    <string name="acceso_vivienda" translatable="false">Acceso a la vivienda</string>
    <string name="otros_datos_vivienda" translatable="false">Otros datos de la vivienda</string>
</resources>