<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.fragments.gestionAlarmasFragments.AtenderAlarmaFragment">

    <TextView
        android:id="@+id/textViewInforme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informe"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <EditText
        android:id="@+id/editTextMotivo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        android:inputType="text|textMultiLine"
        android:text="@string/motivo_dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineh2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineh1"
        />

    <TextView
        android:id="@+id/textViewNivel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/niveles"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineh2"></TextView>

    <Button
        android:id="@+id/buttonNivel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel_sp_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNivel" />

    <Button
        android:id="@+id/buttonNivel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel_sp_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNivel1" />

    <Button
        android:id="@+id/buttonNivel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel_sp_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNivel2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineh2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineh1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />




</androidx.constraintlayout.widget.ConstraintLayout>